--- a/extensions/localsocket/pom.xml
+++ b/extensions/localsocket/pom.xml
@@ -25,10 +25,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
-				<configuration>	
+				<configuration>
 					<archive>
 						<manifestEntries>
-							<X-JOLIE-ProtocolExtension>jsonrpc:jolie.net.JsonRpcProtocolFactory</X-JOLIE-ProtocolExtension>
+							<X-JOLIE-ChannelExtension>localsocket:jolie.net.LocalSocketCommChannelFactory</X-JOLIE-ChannelExtension>
+							<X-JOLIE-ListenerExtension>localsocket:jolie.net.LocalSocketListenerFactory</X-JOLIE-ListenerExtension>
 						</manifestEntries>
 					</archive>
 				</configuration>
@@ -75,7 +76,6 @@
 								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
-          
 						</configuration>
 					</execution>
 				</executions>
