--- a/jolie/pom.xml
+++ b/jolie/pom.xml
@@ -16,6 +16,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<junit.jupiter.version>5.5.2</junit.jupiter.version>
 	</properties>
 	<build>
 		<plugins>
@@ -66,6 +67,12 @@
 			<groupId>${project.groupId}</groupId>
 			<artifactId>libjolie</artifactId>
 			<version>${jolie.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>${junit.jupiter.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<distributionManagement>
