--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -101,6 +101,15 @@
 			"projectName": "jolie",
 			"cwd": "${workspaceFolder}/test",
 			"args": ["-l", ".\\lib\\*;${workspaceFolder}\\dist\\jolie\\lib;${workspaceFolder}\\dist\\jolie\\javaServices/*;${workspaceFolder}\\dist\\jolie\\extensions\\*", "-i", "${workspaceFolder}\\include", "test.ol", ".*jap.*"]
+		},
+		{
+			"type": "java",
+			"name": "Joliedoc - metajolie.iol (Windows)",
+			"request": "launch",
+			"mainClass": "jolie.Jolie",
+			"projectName": "jolie",
+			"cwd": "${workspaceFolder}/include",
+			"args": ["--stackTraces", "-l", "./lib/*:${workspaceFolder}/dist/jolie/lib:${workspaceFolder}/dist/jolie/javaServices/*:${workspaceFolder}/dist/jolie/extensions/*", "-i", "${workspaceFolder}/include", "../tools/joliedoc/joliedoc.ol", "metajolie.iol"]
 		}
 	]
 }
