--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jolie-lang</groupId>
 	<artifactId>distribution</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
-
 	<profiles>
 		<profile>
 			<id>Windows</id>
@@ -44,6 +41,7 @@
 	<name>distribution</name>
 
 	<modules>
+		<module>build-tools</module>
 		<module>libjolie</module>
 		<module>jolie</module>
 		<module>lib/jolie-js</module>
@@ -79,6 +77,15 @@
 	</modules>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>net.revelc.code.formatter</groupId>
+					<artifactId>formatter-maven-plugin</artifactId>
+					<version>2.11.0</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
@@ -231,6 +238,26 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>net.revelc.code.formatter</groupId>
+				<artifactId>formatter-maven-plugin</artifactId>
+				<version>2.11.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>validate</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<compilerSource>1.8</compilerSource>
+					<compilerCompliance>1.8</compilerCompliance>
+					<compilerTargetPlatform>1.8</compilerTargetPlatform>
+					<lineEnding>LF</lineEnding>
+					<encoding>UTF-8</encoding>
+					<configFile>java-jolie-style.xml</configFile>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
