Build now formats
Former-commit-id: 16f92f5d657606b08c4786747937369f14404d8b

--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,7 @@
 				<executions>
 					<execution>
 						<goals>
+							<goal>build</goal>
 							<goal>validate</goal>
 						</goals>
 					</execution>
