Build now formats
Former-commit-id: 607da41119394305df4336c86651942036da8085

--- a/pom.xml
+++ b/pom.xml
@@ -246,7 +246,7 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>build</goal>
+							<goal>format</goal>
 							<goal>validate</goal>
 						</goals>
 					</execution>
