fix compilation for build-tools
Former-commit-id: e9e2a386a7bdcff6bd7fd2981fcb4e858b558f26

--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -13,4 +13,17 @@
 	<packaging>jar</packaging>
 	<name>build-tools</name>
 	<description>Resources for building and formatting automation.</description>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>net.revelc.code.formatter</groupId>
+					<artifactId>formatter-maven-plugin</artifactId>
+					<configuration>
+						<skip>true</skip>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 </project>
