--- a/libjolie/pom.xml
+++ b/libjolie/pom.xml
@@ -18,6 +18,7 @@
 	</properties>
 	<name>libjolie</name>
 	<description>The basic library used for Jolie code parsing and analysis.</description>
+
 	<build>
 		<resources>
 			<resource>
@@ -46,6 +47,13 @@
 									<type>jar</type>
 									<destFileName>${project.artifactId}.jar</destFileName>
 								</artifactItem>
+								<artifactItem>
+									<groupId>dk.brics</groupId>
+									<artifactId>automaton</artifactId>
+									<version>1.12-1</version>
+									<type>jar</type>
+									<destFileName>automaton.jar</destFileName>
+								</artifactItem>
 							</artifactItems>
 							<outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
 						</configuration>
@@ -54,13 +62,20 @@
 			</plugin>
 		</plugins>
 	</build>
+
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>build-tools</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>dk.brics</groupId>
+			<artifactId>automaton</artifactId>
+			<version>1.12-1</version>
+		</dependency>
 	</dependencies>
+
 	<distributionManagement>
 		<repository>
 			<id>github</id>
