--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,24 +1,22 @@
 name: Java CI
 
-
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+	push:
+		branches: [ master ]
+	pull_request:
+		branches: [ master ]
 
 jobs:
-  build:
-
-    runs-on: ${{matrix.os}}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Maven
-        run: mvn install --file pom.xml
+	build:
+		runs-on: ${{matrix.os}}
+		strategy:
+			matrix:
+				os: [ubuntu-latest, windows-latest, macos-latest]
+		steps:
+			- uses: actions/checkout@v2
+			- name: Set up JDK
+				uses: actions/setup-java@v1
+				with:
+					java-version: 11
+			- name: Build with Maven
+				run: mvn install --file pom.xml
