Move jolie-v1.9.x service loaders to module jolie-embedding-legacy

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 		<module>extensions/http</module>
 		<module>extensions/https</module>
 		<module>extensions/javascript</module>
+		<module>extensions/jolie-embedding-legacy</module>
 		<module>extensions/jsonrpc</module>
 		<module>extensions/local</module>
 		<module>extensions/localsocket</module>
