Move jolie entry point to module jolie-cli

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<module>build-tools</module>
 		<module>libjolie</module>
 		<module>jolie</module>
+		<module>jolie-cli</module>
 		<module>lib/jolie-js</module>
 		<module>lib/jolie-ssl</module>
 		<module>lib/jolie-xml</module>
