Decouple the runtime from the command line parser (#290)
* Move jolie-v1.9.x service loaders to module jolie-embedding-legacy

* Move jolie entry point to module jolie-cli

* Move CommandLineParser.java to module jolie-cli

Former-commit-id: 550d5873a60a2c55d613ccd528be68f34a7e8039

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<module>build-tools</module>
 		<module>libjolie</module>
 		<module>jolie</module>
+		<module>jolie-cli</module>
 		<module>lib/jolie-js</module>
 		<module>lib/jolie-ssl</module>
 		<module>lib/jolie-xml</module>
@@ -56,6 +57,7 @@
 		<module>extensions/http</module>
 		<module>extensions/https</module>
 		<module>extensions/javascript</module>
+		<module>extensions/jolie-embedding-legacy</module>
 		<module>extensions/jsonrpc</module>
 		<module>extensions/local</module>
 		<module>extensions/localsocket</module>
