--- a/extensions/jolie-embedding-legacy/pom.xml
+++ b/extensions/jolie-embedding-legacy/pom.xml
@@ -1,15 +1,15 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-	
-    <parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+      <modelVersion>4.0.0</modelVersion>
+  <parent>
         <groupId>org.jolie-lang</groupId>
         <artifactId>distribution</artifactId>
         <relativePath>../../pom.xml</relativePath>
         <version>1.0.0</version>
     </parent>
     <groupId>org.jolie-lang</groupId>
-    <artifactId>metaservice-java</artifactId>
+    <artifactId>jolie-embedding-legacy</artifactId>
     <version>${jolie.version}</version>
     <packaging>jar</packaging>
     <properties>
@@ -17,10 +17,22 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <name>metaservice-java</name>
-    <description>The basic library used for Jolie code parsing and analysis.</description>
+    <name>jolie-embedding-legacy</name>
+    <description>Jolie embedding extension for Jolie.</description>
     <build>
         <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.4</version>
+				<configuration>	
+					<archive>
+						<manifestEntries>
+							<X-JOLIE-EmbeddingExtension>Jolie:jolie.embedding.jolie.JolieServiceLoaderFactory</X-JOLIE-EmbeddingExtension>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -42,8 +54,7 @@
                                     <destFileName>${project.artifactId}.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
-          
+                            <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/extensions</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
@@ -51,7 +62,7 @@
         </plugins>
     </build>
     <dependencies>
-        <dependency>
+         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jolie</artifactId>
             <version>${jolie.version}</version>
@@ -62,11 +73,4 @@
             <version>${jolie.version}</version>
         </dependency>
     </dependencies>
-    <distributionManagement>
-		<repository>
-			<id>github</id>
-			<name>GitHub Jolie Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/jolie/jolie</url>
-		</repository>
-	</distributionManagement>
 </project>
