--- a/jolie-cli/pom.xml
+++ b/jolie-cli/pom.xml
@@ -1,26 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	
     <parent>
         <groupId>org.jolie-lang</groupId>
         <artifactId>distribution</artifactId>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
         <version>1.0.0</version>
     </parent>
-    <groupId>org.jolie-lang</groupId>
-    <artifactId>metaservice-java</artifactId>
     <version>${jolie.version}</version>
+    <groupId>org.jolie-lang</groupId>
+    <artifactId>jolie-cli</artifactId>
+    <name>jolie-cli</name>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <name>metaservice-java</name>
-    <description>The basic library used for Jolie code parsing and analysis.</description>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Main-Class>jolie.Jolie</Main-Class>
+                            <Class-Path>lib/libjolie.jar jolie.jar</Class-Path>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -42,31 +55,31 @@
                                     <destFileName>${project.artifactId}.jar</destFileName>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}/lib</outputDirectory>
-          
+                            <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
+    <description>The Jolie command line interface.</description>
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>libjolie</artifactId>
+            <version>${jolie.version}</version>
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jolie</artifactId>
             <version>${jolie.version}</version>
         </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>jolie-cli</artifactId>
-            <version>${jolie.version}</version>
-        </dependency>
     </dependencies>
     <distributionManagement>
-		<repository>
-			<id>github</id>
-			<name>GitHub Jolie Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/jolie/jolie</url>
-		</repository>
-	</distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Jolie Apache Maven Packages</name>
+            <url>https://maven.pkg.github.com/jolie/jolie</url>
+        </repository>
+    </distributionManagement>
 </project>
