Specify service parameter with command line argument --params

--- a/jolie-cli/pom.xml
+++ b/jolie-cli/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>jolie</artifactId>
             <version>${jolie.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jolie-js</artifactId>
+            <version>${jolie.version}</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
