--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -28,7 +28,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Class-Path>lib/jolie.jar lib/libjolie.jar lib/mailapi.jar lib/smtp.jar lib/jolie-xml.jar lib/ini4j.jar lib/c3p0-0.9.1.1.jar lib/smack.jar lib/smackx.jar lib/wsdl4j.jar lib/xsom.jar lib/commons-lang3.jar lib/http.jar lib/jolie-js.jar lib/uri-templates.jar lib/quartz-2.2.1.jar lib/quartz-jobs-2.2.1.jar lib/slf4j-api-1.6.6.jar lib/javax.activation.jar lib/joda-time.jar</Class-Path>
+                            <Class-Path>lib/jolie.jar lib/libjolie.jar lib/mailapi.jar lib/smtp.jar lib/jolie-xml.jar lib/ini4j.jar lib/c3p0-0.9.1.1.jar lib/smack.jar lib/smackx.jar lib/wsdl4j.jar lib/xsom.jar lib/commons-lang3.jar lib/http.jar lib/jolie-js.jar lib/uri-templates.jar lib/quartz-2.2.1.jar lib/quartz-jobs-2.2.1.jar lib/slf4j-api.jar lib/slf4j-simple.jar lib/javax.activation.jar lib/joda-time.jar lib/Java-WebSocket.jar</Class-Path>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -244,7 +244,7 @@
                             <goal>copy</goal>
                         </goals>
                         <configuration>
-                            <artifactItems> 
+                            <artifactItems>
                                 <artifactItem>
                                     <groupId>com.sun.xml.messaging.saaj</groupId>
                                     <artifactId>saaj-impl</artifactId>
@@ -367,7 +367,14 @@
                                     <artifactId>slf4j-api</artifactId>
                                     <version>1.6.6</version>
                                     <type>jar</type>
-                                    <destFileName>slf4j-api-1.6.6.jar</destFileName>
+                                    <destFileName>slf4j-api.jar</destFileName>
+                                </artifactItem>
+                                <artifactItem>
+                                    <groupId>org.slf4j</groupId>
+                                    <artifactId>slf4j-simple</artifactId>
+                                    <version>1.7.25</version>
+                                    <type>jar</type>
+                                    <destFileName>slf4j-simple.jar</destFileName>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>c3p0</groupId>
@@ -422,7 +429,13 @@
                                     <type>jar</type>
                                     <destFileName>txw2.jar</destFileName>
                                 </artifactItem>
-                                
+                                <artifactItem>
+                                    <groupId>org.java-websocket</groupId>
+                                    <artifactId>Java-WebSocket</artifactId>
+                                    <version>1.5.1</version>
+                                    <type>jar</type>
+                                    <destFileName>Java-WebSocket.jar</destFileName>
+                                </artifactItem>
                             </artifactItems>   
                             <!--artifactItems>
         
@@ -542,7 +555,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.6.6</version>
+            <version>1.7.25</version>
         </dependency>
         <dependency>
             <groupId>c3p0</groupId>
@@ -750,6 +763,16 @@
             <groupId>com.sun.xml.txw2</groupId>
             <artifactId>txw2</artifactId>
             <version>20110809</version>
+        </dependency>
+        <dependency>
+            <groupId>org.java-websocket</groupId>
+            <artifactId>Java-WebSocket</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
         </dependency>
     </dependencies>
 </project>
