--- a/test/extensions/private/WS-test/pom.xml
+++ b/test/extensions/private/WS-test/pom.xml
@@ -57,19 +57,24 @@
             <version>${jolie.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml.ws</groupId>
-            <artifactId>jaxws-api</artifactId>
-            <version>2.3.1</version>
+            <groupId>com.sun.xml.messaging.saaj</groupId>
+            <artifactId>saaj-impl</artifactId>
+            <version>2.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>javax.jws</groupId>
-            <artifactId>javax.jws-api</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.xml.ws</groupId>
-            <artifactId>rt</artifactId>
-            <version>2.3.3</version>
-        </dependency>
-    </dependencies>
-</project>
+<!--        <dependency>-->
+<!--            <groupId>javax.xml.ws</groupId>-->
+<!--            <artifactId>jaxws-api</artifactId>-->
+<!--            <version>2.3.1</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>javax.jws</groupId>-->
+<!--            <artifactId>javax.jws-api</artifactId>-->
+<!--            <version>1.1</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.sun.xml.ws</groupId>-->
+<!--            <artifactId>rt</artifactId>-->
+<!--            <version>2.3.3</version>-->
+<!--        </dependency>-->
+            </dependencies>
+        </project>
