--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -61,13 +61,15 @@
       "name": "Tests - All",
       "request": "launch",
       "mainClass": "jolie.Jolie",
-      "projectName": "jolie",
+      "projectName": "jolie-cli",
       "cwd": "${workspaceFolder}/test",
       "args": [
         "-l",
         "./lib/*:${workspaceFolder}/dist/jolie/lib:${workspaceFolder}/dist/jolie/javaServices/*:${workspaceFolder}/dist/jolie/extensions/*",
         "-i",
         "${workspaceFolder}/include",
+        "-p",
+        "${workspaceFolder}/packages",
         "test.ol"
       ]
     },
@@ -190,7 +192,7 @@
       "name": "Debug - CustomFile",
       "request": "launch",
       "mainClass": "jolie.Jolie",
-      "projectName": "jolie",
+      "projectName": "jolie-cli",
       "cwd": "${workspaceFolder}/test",
       "args": [
         "-l",
