added windows debug configuration for Debug - Customfile
Former-commit-id: d9b534337e6ff6d0e6f016558bc4ea1466644dea

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -193,11 +193,29 @@
       "cwd": "${workspaceFolder}/test",
       "args": [
         "-l",
-        "./lib/*:${workspaceFolder}/dist/jolie/lib:${workspaceFolder}/dist/jolie/javaServices/*:${workspaceFolder}/dist/jolie/extensions/*",
+        ".lib/*:${workspaceFolder}/dist/jolie/lib:${workspaceFolder}/dist/jolie/javaServices/*:${workspaceFolder}/dist/jolie/extensions/*",
         "-i",
         "${workspaceFolder}/include",
         "-p",
         "${workspaceFolder}/packages",
+        "test.ol",
+        "${input:programName}"
+      ]
+    },
+    {
+      "type": "java",
+      "name": "Windows:Tests - CustomFile",
+      "request": "launch",
+      "mainClass": "jolie.Jolie",
+      "projectName": "jolie-cli",
+      "cwd": "${workspaceFolder}\\test",
+      "args": [
+        "-l",
+        ".lib\\*;${workspaceFolder}\\dist\\jolie\\lib;${workspaceFolder}\\dist\\jolie\\javaServices\\*;${workspaceFolder}\\dist\\jolie\\extensions\\*",
+        "-i",
+        "${workspaceFolder}\\include",
+        "-p",
+        "${workspaceFolder}\\packages",
         "test.ol",
         "${input:programName}"
       ]
