windows configurazione to launch the debug for io_fault.ol
Former-commit-id: bc4890b85bdaf6fd37cbaf55c25e6ca34f1f86e2

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
   "configurations": [
     {
       "type": "java",
-      "name": "Launch Jolie",
+      "name": "Windows: Launch Jolie",
       "request": "launch",
       "mainClass": "jolie.Jolie",
       "projectName": "jolie-cli",
