--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
         ".\\lib\\*;${workspaceFolder}\\dist\\jolie\\lib;${workspaceFolder}\\dist\\jolie\\javaServices\\*;${workspaceFolder}\\dist\\jolie\\extensions/*",
         "-i",
         "${workspaceFolder}\\include",
-        "io_fault.ol"
+        "${input:programName}"
         ]
     },
     {
