--- a/libjolie/pom.xml
+++ b/libjolie/pom.xml
@@ -17,7 +17,8 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<name>libjolie</name>
-	<description>The basic library used for Jolie code parsing and analysis.</description>
+	<description>Java library for parsing and analysing Jolie code.</description>
+	<url>${jolie.url}</url>
 
 	<build>
 		<resources>
@@ -76,11 +77,105 @@
 		</dependency>
 	</dependencies>
 
-	<distributionManagement>
-		<repository>
-			<id>github</id>
-			<name>GitHub Jolie Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/jolie/jolie</url>
-		</repository>
-	</distributionManagement>
+	<scm>
+		<connection>scm:git:git://github.com/jolie/jolie.git</connection>
+		<developerConnection>scm:git:ssh://github.com:fmontesi/jolie/jolie.git</developerConnection>
+		<url>http://github.com/jolie/jolie/tree/master</url>
+	</scm>
+
+	<licenses>
+		<license>
+			<name>LGPL 2.1</name>
+			<url>https://github.com/jolie/jolie/blob/master/LICENSE</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>${jolie.developer}</name>
+			<email>${jolie.email}</email>
+			<organization>${jolie.organization}</organization>
+			<organizationUrl>${jolie.organizationUrl}</organizationUrl>
+		</developer>
+	</developers>
+
+	<profiles>
+		<profile>
+			<id>ossrh</id>
+
+			<distributionManagement>
+				<snapshotRepository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+				</snapshotRepository>
+				<repository>
+					<id>ossrh</id>
+					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+				</repository>
+			</distributionManagement>
+
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.8</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>attach-sources</id>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>2.10.4</version>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+								<configuration>
+									<gpgArguments>
+										<arg>--pinentry-mode</arg>
+										<arg>loopback</arg>
+									</gpgArguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
