--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 		<jolie.installation.directory>dist/jolie</jolie.installation.directory>
 		<jolie.installation.directory.executable>dist/launchers</jolie.installation.directory.executable>
 		<jolie.version>1.10.0-beta3</jolie.version>
+		<jolie.url>https://www.jolie-lang.org/</jolie.url>
+		<jolie.developer>The Jolie Developers</jolie.developer>
+		<jolie.email>webmaster@jolie-lang.org</jolie.email>
+		<jolie.organization>Jolie</jolie.organization>
+		<jolie.organizationUrl>https://www.jolie-lang.org</jolie.organizationUrl>
 	</properties>
 	<description>The distribution of the Jolie language, containing interpreter and extensions.</description>
 	<name>distribution</name>
