--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -20,6 +20,8 @@ jobs:
         java-version: '8'
         distribution: 'adopt'
         server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
 
     - name: Install gpg secret key
       run: |
