current work directory set to test for Window Launch jolie configuration
Former-commit-id: 4ceb7fa40fd757f3fd3a941d1e34cb0d4ae5534c

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
       "request": "launch",
       "mainClass": "jolie.Jolie",
       "projectName": "jolie-cli",
-      "cwd": "${workspaceFolder}\\test\\IO_Exception",
+      "cwd": "${workspaceFolder}\\test",
       "args": [
         "-l",
         ".\\lib\\*;${workspaceFolder}\\dist\\jolie\\lib;${workspaceFolder}\\dist\\jolie\\javaServices\\*;${workspaceFolder}\\dist\\jolie\\extensions/*",
