--- a/jolie/pom.xml
+++ b/jolie/pom.xml
@@ -11,6 +11,8 @@
 	<version>${jolie.version}</version>
 	<groupId>org.jolie-lang</groupId>
 	<artifactId>jolie</artifactId>
+	<name>jolie</name>
+	<url>${jolie.url}</url>
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
