--- a/lib/jolie-js/pom.xml
+++ b/lib/jolie-js/pom.xml
@@ -12,6 +12,7 @@
 	<artifactId>jolie-js</artifactId>
 	<version>${jolie.version}</version>
 	<packaging>jar</packaging>
+	<url>${jolie.url}</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
